--- a/login.html
+++ b/login.html
@@ -22,17 +22,17 @@
                     <h1 class="h3 mb-3 font-weight-normal">
                         請先登入
                     </h1>
-                    <form id="form" class="form-signin">
+                    <form id="form" class="form-signin" @keyup.enter="login">
                         <div class="form-floating mb-3">
                             <input type="email" class="form-control" id="username" placeholder="name@example.com" v-model="user.username"
                                 required autofocus>
                             <label for="username">請輸入電子郵件</label>
                         </div>
                         <div class="form-floating">
-                            <input type="password" class="form-control" id="password" placeholder="Password" v-model="user.password" required>
+                            <input type="password" class="form-control" id="password" placeholder="Password" v-model="user.password"  required>
                             <label for="password">請輸入密碼</label>
                         </div>
-                        <button class="btn btn-lg btn-primary w-100 mt-3" type="button" @click="login">
+                        <button class="btn btn-lg btn-primary w-    100 mt-3" type="button" @click="login" >
                             登入
                         </button>
                     </form>
