--- a/products.html
+++ b/products.html
@@ -18,8 +18,11 @@
     <div id="app">
         <div class="container">
             <div class="text-end mt-4">
-                <button class="btn btn-primary" @click="openProductModal('new')">
+                <button class="btn btn-primary me-2" @click="openProductModal('new')">
                     建立新的產品
+                </button>
+                <button class="btn btn-secondary" @click="openProductModal('logout')">
+                    登出
                 </button>
             </div>
             <table class="table mt-4">
@@ -29,7 +32,7 @@
                         <th width="120">產品名稱</th>
                         <th width="90">原價</th>
                         <th width="90">售價</th>
-                        <th width="100">是否啟用</th>
+                        <th width="100">是否上架</th>
                         <th width="120">編輯/刪除</th>
                     </tr>
                 </thead>
@@ -45,15 +48,17 @@
                                     v-model="product.is_enabled" :true-value="1" :false-value="0">
                                 <label class="form-check-label ms-2" for="product.id"
                                     :class="{'text-success': product.is_enabled, 'text-danger': !product.is_enabled}">
-                                    {{ product.is_enabled ? "啟用" : "未啟用" }}</label>
+                                    {{ product.is_enabled ? "上架" : "未上架" }}</label>
                             </div>
                         </td>
                         <td>
                             <div class="btn-group">
-                                <button type="button" class="btn btn-outline-primary btn-sm" @click="openProductModal('edit', product)">
+                                <button type="button" class="btn btn-outline-primary btn-sm"
+                                    @click="openProductModal('edit', product)">
                                     編輯
                                 </button>
-                                <button type="button" class="btn btn-outline-danger btn-sm" :disabled="product.is_enabled" @click="openProductModal('delete', product)">
+                                <button type="button" class="btn btn-outline-danger btn-sm"
+                                    :disabled="product.is_enabled" @click="openProductModal('delete', product)">
                                     刪除
                                 </button>
                             </div>
@@ -71,16 +76,18 @@
                         <h5 id="productModalLabel" class="modal-title">
                             <span>{{isNew ? "新增產品" : "編輯產品"}}</span>
                         </h5>
-                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="row">
+                        <form class="row needs-validation" novalidate>
                             <div class="col-sm-4">
                                 <h3>主要圖片</h3>
                                 <div class="mb-5">
                                     <div class="mb-3">
                                         <label for="imageUrl" class="form-label">圖片網址</label>
-                                        <input type="text" class="form-control" placeholder="請輸入圖片連結" v-model="tempProduct.imageUrl">
+                                        <input type="text" class="form-control" placeholder="請輸入圖片連結"
+                                            v-model="tempProduct.imageUrl">
                                     </div>
                                     <img class="img-fluid" :src="tempProduct.imageUrl" alt="">
                                 </div>
@@ -88,19 +95,23 @@
                                 <div v-for="(image, index) in tempProduct.imagesUrl" :key="index">
                                     <div class="mb-3">
                                         <label for="imageUrl" class="form-label">{{ `圖片網址 ${index + 1}` }}</label>
-                                        <input type="text" class="form-control" placeholder="請輸入圖片連結" v-model="tempProduct.imagesUrl[index]">
+                                        <input type="text" class="form-control" placeholder="請輸入圖片連結"
+                                            v-model="tempProduct.imagesUrl[index]">
                                     </div>
                                     <img class="img-fluid mb-2" :src="image" alt="">
                                 </div>
                                 <!-- !tempProduct.imagesUrl.length 看陣列是否有資料 -->
                                 <!-- tempProduct.imagesUrl[tempProduct.imagesUrl.length - 1] 看陣列是否確實填寫了資料(空字串也是 false) -->
-                                <div v-if="!tempProduct.imagesUrl.length || tempProduct.imagesUrl[tempProduct.imagesUrl.length - 1]">
-                                    <button class="btn btn-outline-primary btn-sm d-block w-100" @click="tempProduct.imagesUrl.push('')">
+                                <div
+                                    v-if="!tempProduct.imagesUrl.length || tempProduct.imagesUrl[tempProduct.imagesUrl.length - 1]">
+                                    <button class="btn btn-outline-primary btn-sm d-block w-100"
+                                        @click="tempProduct.imagesUrl.push('')">
                                         新增圖片
                                     </button>
                                 </div>
                                 <div v-else>
-                                    <button class="btn btn-outline-danger btn-sm d-block w-100" @click="tempProduct.imagesUrl.pop('')">
+                                    <button class="btn btn-outline-danger btn-sm d-block w-100"
+                                        @click="tempProduct.imagesUrl.pop('')">
                                         刪除圖片
                                     </button>
                                 </div>
@@ -108,17 +119,29 @@
                             <div class="col-sm-8">
                                 <div class="mb-3">
                                     <label for="title" class="form-label">標題</label>
-                                    <input id="title" type="text" class="form-control" placeholder="請輸入標題" v-model="tempProduct.title">
+                                    <input id="title" type="text" class="form-control" placeholder="請輸入標題"
+                                        v-model="tempProduct.title" required>
+                                    <div class="text-danger">
+                                        {{ !this.tempProduct.title ? remindMessage : "" }}
+                                    </div>
                                 </div>
 
                                 <div class="row">
                                     <div class="mb-3 col-md-6">
                                         <label for="category" class="form-label">分類</label>
-                                        <input id="category" type="text" class="form-control" placeholder="請輸入分類" v-model="tempProduct.category">
+                                        <input id="category" type="text" class="form-control" placeholder="請輸入分類"
+                                            v-model="tempProduct.category">
+                                        <div class="text-danger">
+                                            {{ !this.tempProduct.category ? remindMessage : "" }}
+                                        </div>
                                     </div>
                                     <div class="mb-3 col-md-6">
                                         <label for="price" class="form-label">單位</label>
-                                        <input id="unit" type="text" class="form-control" placeholder="請輸入單位" v-model="tempProduct.unit">
+                                        <input id="unit" type="text" class="form-control" placeholder="請輸入單位"
+                                            v-model="tempProduct.unit">
+                                        <div class="text-danger">
+                                            {{ !this.tempProduct.unit ? remindMessage : "" }}
+                                        </div>
                                     </div>
                                 </div>
 
@@ -127,40 +150,48 @@
                                         <label for="origin_price" class="form-label">原價</label>
                                         <input id="origin_price" type="number" min="0" class="form-control"
                                             placeholder="請輸入原價" v-model="tempProduct.origin_price">
+                                        <div class="text-danger">
+                                            {{ !this.tempProduct.origin_price ? remindMessage : "" }}
+                                        </div>
                                     </div>
                                     <div class="mb-3 col-md-6">
                                         <label for="price" class="form-label">售價</label>
-                                        <input id="price" type="number" min="0" class="form-control"
-                                            placeholder="請輸入售價" v-model="tempProduct.price">
+                                        <input id="price" type="number" min="0" class="form-control" placeholder="請輸入售價"
+                                            v-model="tempProduct.price">
+                                        <div class="text-danger">
+                                            {{ !this.tempProduct.price ? remindMessage : "" }}
+                                        </div>
                                     </div>
                                 </div>
                                 <hr>
 
                                 <div class="mb-3">
                                     <label for="description" class="form-label">產品描述</label>
-                                    <textarea id="description" type="text" class="form-control" placeholder="請輸入產品描述" v-model="tempProduct.description">
+                                    <textarea id="description" type="text" class="form-control" placeholder="請輸入產品描述"
+                                        v-model="tempProduct.description">
                       </textarea>
                                 </div>
                                 <div class="mb-3">
                                     <label for="content" class="form-label">說明內容</label>
-                                    <textarea id="content" type="text" class="form-control" placeholder="請輸入說明內容" v-model="tempProduct.content">
+                                    <textarea id="content" type="text" class="form-control" placeholder="請輸入說明內容"
+                                        v-model="tempProduct.content">
                       </textarea>
                                 </div>
                                 <div class="mb-3">
                                     <div class="form-check">
-                                        <input id="is_enabled" class="form-check-input" type="checkbox" v-model="tempProduct.is_enabled" :true-value="1"
-                                            :false-value="0">
+                                        <input id="is_enabled" class="form-check-input" type="checkbox"
+                                            v-model="tempProduct.is_enabled" :true-value="1" :false-value="0">
                                         <label class="form-check-label" for="is_enabled">是否啟用</label>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                             取消
                         </button>
-                        <button type="button" class="btn btn-primary" @click="updateProduct(tempProduct.id)">
+                        <button type="button" class="btn btn-primary" @click="validation(tempProduct.id)">
                             確認
                         </button>
                     </div>
@@ -194,6 +225,33 @@
                 </div>
             </div>
         </div>
+
+        <!-- logoutModal -->
+        <div id="logoutModal" ref="logoutModal" class="modal fade" tabindex="-1"
+            aria-labelledby="logoutModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content border-0">
+                    <div class="modal-header bg-secondary text-white">
+                        <h5 id="logoutModalLabel" class="modal-title">
+                            <span>刪除產品</span>
+                        </h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        是否要登出？
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                            取消
+                        </button>
+                        <button type="button" class="btn btn-secondary" @click="logout">
+                            登出
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Modal -->
     </div>
     <!-- Bootstrap -->
